<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome_text">Welcome to Quiz App</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="select_category">Select Category</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="science">Science</string>
    <string name="history">History</string>
    <string name="next_question">Next Question</string>
    <string name="try_again">Try Again</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="score_format">Score: %1$d/%2$d</string>
</resources>